[lworld] Several crashes with C2 stress options

XMLWordPrintable

      Running with various C2 stress options like -XX:+StressReflectiveCode, I'm seeing the following failures that I'm going to fix with this bug:

      # Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/graphKit.cpp:3666), pid=28968, tid=28982
      # assert(!gvn().type(res)->maybe_null()) failed: Inline types are null-free

      Current CompileTask:
      C2: 2864 194 b compiler.valhalla.inlinetypes.TestLWorld::test77 (6 bytes)

      Stack: [0x00007fa567cfd000,0x00007fa567dfe000], sp=0x00007fa567df8d00, free space=1007k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xdaf600] GraphKit::gen_checkcast(Node*, Node*, Node**)+0xef0
      V [libjvm.so+0x16bb88d] Parse::do_checkcast()+0x28d
      V [libjvm.so+0x16af0d6] Parse::do_one_bytecode()+0xc06
      V [libjvm.so+0x16960c8] Parse::do_one_block()+0x848
      V [libjvm.so+0x1696ff0] Parse::do_all_blocks()+0x130
      V [libjvm.so+0x169c080] Parse::Parse(JVMState*, ciMethod*, float)+0xe70
      V [libjvm.so+0x8702b5] ParseGenerator::generate(JVMState*)+0x115
      V [libjvm.so+0x871128] LateInlineCallGenerator::do_late_inline()+0xcb8
      V [libjvm.so+0xa46b8a] Compile::inline_incrementally_one()+0x14a
      V [libjvm.so+0xa46f3f] Compile::inline_incrementally(PhaseIterGVN&)+0x18f
      V [libjvm.so+0xa4e339] Compile::Optimize()+0x3e9
      V [libjvm.so+0xa513dd] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x19dd
      V [libjvm.so+0x86d25a] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1ea
      V [libjvm.so+0xa61a18] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xe08
      V [libjvm.so+0xa62568] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x198ea86] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x1995400] Thread::call_run()+0x100
      V [libjvm.so+0x164fdd6] thread_native_entry(Thread*)+0x116


      # Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/node.hpp:935), pid=30515, tid=30529
      # assert(is_InlineType()) failed: invalid node class: CheckCastPP

      Current CompileTask:
      C2: 1170 121 b compiler.valhalla.inlinetypes.TestMethodHandles::test4 (7 bytes)

      Stack: [0x00007f994c137000,0x00007f994c238000], sp=0x00007f994c233150, free space=1008k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xd9ca57] GraphKit::set_arguments_for_java_call(CallJavaNode*, bool)+0x527
      V [libjvm.so+0x878c7b] DirectCallGenerator::generate(JVMState*)+0x2fb
      V [libjvm.so+0x871128] LateInlineCallGenerator::do_late_inline()+0xcb8
      V [libjvm.so+0xa46b8a] Compile::inline_incrementally_one()+0x14a
      V [libjvm.so+0xa46f3f] Compile::inline_incrementally(PhaseIterGVN&)+0x18f
      V [libjvm.so+0xa4e339] Compile::Optimize()+0x3e9
      V [libjvm.so+0xa513dd] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x19dd
      V [libjvm.so+0x86d25a] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1ea
      V [libjvm.so+0xa61a18] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xe08
      V [libjvm.so+0xa62568] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x198e6a6] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x1995020] Thread::call_run()+0x100
      V [libjvm.so+0x164f9f6] thread_native_entry(Thread*)+0x116


      # Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/callnode.cpp:970), pid=40551, tid=40565
      # assert(!do_asserts || projs->fallthrough_catchproj != __null) failed: must be found

      Current CompileTask:
      C2: 1782 173 b compiler.valhalla.inlinetypes.TestNullableArrays::test109 (34 bytes)

      Stack: [0x00007fe4d1cfd000,0x00007fe4d1dfe000], sp=0x00007fe4d1df91d0, free space=1008k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x88526a] CallNode::extract_projections(bool, bool)+0xa5a
      V [libjvm.so+0x13eb0b3] PhaseMacroExpand::process_users_of_allocation(CallNode*, bool)+0x423
      V [libjvm.so+0x13fd85e] PhaseMacroExpand::eliminate_allocate_node(AllocateNode*) [clone .part.0]+0x3de
      V [libjvm.so+0x13fdcbb] PhaseMacroExpand::eliminate_macro_nodes()+0x35b
      V [libjvm.so+0xa4f1dd] Compile::Optimize()+0x12cd
      V [libjvm.so+0xa5139d] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x19dd
      V [libjvm.so+0x86d25a] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1ea
      V [libjvm.so+0xa619d8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xe08
      V [libjvm.so+0xa62528] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x198e666] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x1994fe0] Thread::call_run()+0x100
      V [libjvm.so+0x164f9b6] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: