8259230: [lworld] Several crashes with C2 stress options